[gd_scene load_steps=5 format=3 uid="uid://cpy73rsjkhjof"]

[ext_resource type="Texture2D" uid="uid://cngh1yax0t6w6" path="res://Sprites/UI/BattleUIBase.png" id="1_4jryg"]
[ext_resource type="Script" path="res://Scenes/UI/battle_ui.gd" id="1_on61b"]
[ext_resource type="Texture2D" uid="uid://buturd74io4mv" path="res://Sprites/UI/ResourceProgress1.png" id="3_flsy5"]
[ext_resource type="Texture2D" uid="uid://nhalmskqhddv" path="res://Sprites/UI/ResourceProgress2.png" id="4_5yivv"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_on61b")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 568)
texture = ExtResource("1_4jryg")

[node name="Units" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 687.0
offset_top = 507.0
offset_right = 817.0
offset_bottom = 637.0
size_flags_horizontal = 4
size_flags_vertical = 8
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Units"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitOne" type="Button" parent="Units/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitTwo" type="Button" parent="Units/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Units"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitThree" type="Button" parent="Units/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitFour" type="Button" parent="Units/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Abilities" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 825.0
offset_top = 507.0
offset_right = 890.0
offset_bottom = 637.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Abilities"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="Abilities"]
layout_mode = 2
size_flags_vertical = 3

[node name="IncomeTimer" type="Timer" parent="."]

[node name="IncomeVisual" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062
offset_left = 621.0
offset_top = 581.0
offset_right = 644.68
offset_bottom = 604.824
scale = Vector2(0.9, 0.9)
value = 100.0
fill_mode = 4
texture_under = ExtResource("3_flsy5")
texture_progress = ExtResource("4_5yivv")

[connection signal="timeout" from="IncomeTimer" to="." method="_on_income_timer_timeout"]
